project structure improvements

--- a/src/Antmus.Server/appsettings.json
+++ b/src/Antmus.Server/appsettings.json
@@ -22,7 +22,7 @@
   "AllowedOrigins": "http://localhost:8080", /* list of origins split by ';' (without whitespace) */
   "Mode": "Mock", /* Recorder, Mock */
   "Redirect": "http://localhost:8080",
-  "RequestHeaders": [ "Cookie" ],
+  "RequestHeaders": [],
   "ResponseHeaders": [],
   "Mocks": {
     "Path": "mocks"
