--- a/src/Antmus.Server/Antmus.Server.csproj
+++ b/src/Antmus.Server/Antmus.Server.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Shared\Extensions\" />
+  </ItemGroup>
+
 </Project>
