feature: custom mock
* project structure improvements
* added test api project
* added custom mock feature
* added visual studio configurations
* added mock create api
* postman tests
* README.md update
* added application/problem+json as a valid text type

--- a/src/Antmus.Server/appsettings.json
+++ b/src/Antmus.Server/appsettings.json
@@ -5,10 +5,6 @@
       "Microsoft": "Warning"
     },
     "Console": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft": "Information"
-      },
       "FormatterName": "simple",
       "FormatterOptions": {
         "SingleLine": true,
@@ -19,10 +15,10 @@
     }
   },
   "AllowedHosts": "*",
-  "AllowedOrigins": "http://localhost:8080", /* list of origins split by ';' (without whitespace) */
+  "AllowedOrigins": "http://localhost:5000", /* list of origins split by ';' (without whitespace) */
   "Mode": "Mock", /* Recorder, Mock */
-  "Redirect": "http://localhost:8080",
-  "RequestHeaders": [ "Cookie" ],
+  "Redirect": "http://localhost:5000",
+  "RequestHeaders": [],
   "ResponseHeaders": [],
   "Mocks": {
     "Path": "mocks"
