added expressions filter

--- a/src/Antmus.Server/Antmus.Server.csproj
+++ b/src/Antmus.Server/Antmus.Server.csproj
@@ -5,4 +5,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Configurations>Release;Mock;Recorder</Configurations>
 	</PropertyGroup>
+	<ItemGroup>
+	  <PackageReference Include="RPN.Net" Version="1.2.3" />
+	</ItemGroup>
 </Project>
