allow expressions to target specific headers

--- a/src/Antmus.Server/appsettings.json
+++ b/src/Antmus.Server/appsettings.json
@@ -18,9 +18,10 @@
   "AllowedOrigins": "http://localhost:5000", /* list of origins split by ';' (without whitespace) */
   "Mode": "Mock", /* Recorder, Mock */
   "Redirect": "http://localhost:5000",
-  "RequestHeaders": [],
+  "RequestHeadersToCalculateHashFrom": [],
   "ResponseHeaders": [],
   "Mocks": {
     "Path": "mocks"
-  }
+  },
+  "UseCaseSensitivePaths": false
 }
